--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,1 +1,20 @@
-<p>footer works!</p>
+<footer class="footer">
+    <ul>
+       <li class="left"><app-bmt-logo></app-bmt-logo></li> 
+       <li class="middle">
+        <ul>
+            <li>Contact Us</li>
+            <li>Support</li>
+            <li>Profile</li>
+        </ul>
+       </li> 
+       <li class="right">
+        <ul class="social">
+            <li><mat-icon [color]="'red'">facebook</mat-icon></li>
+            <li><mat-icon>facebook</mat-icon></li>
+            <li><mat-icon>facebook</mat-icon></li>
+            <li><mat-icon>facebook</mat-icon></li>
+        </ul>
+       </li> 
+    </ul>
+</footer>
