--- a/src/app/auth/login/login.component.scss
+++ b/src/app/auth/login/login.component.scss
@@ -2,10 +2,13 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 100vh;
        .login-container{
         min-width: 400px;
         width: 100%;
+    }
+    mat-card{
+        height: 100vh;
+        padding-top: 80px;
     }
     .mat-mdc-form-field{
         width: 100%;
